# psypyenv

./: pyproject.toml
src/psypyenv/: cli.py  requirements.py
tests/: test_environment_conda.py  test_requirements_scenarios.py
tests/data/pyproject_samples/: build_system_requires.toml  pep621_basic.toml  pep621_optional.toml
