[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psypyenv"
version = "0.1.0"
description = "Cross-platform environment compatibility checker for Python projects."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "twobob"}]
dependencies = [
    "packaging>=23.0",
    "platformdirs>=3.0",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
keywords = ["environment", "compatibility", "conda", "pip"]

[project.urls]
Homepage = "https://github.com/twobob/psypyenv"
Repository = "https://github.com/twobob/psypyenv"
Issues = "https://github.com/twobob/psypyenv/issues"

[project.scripts]
psypyenv = "psypyenv.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
